Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13096

incorrect used_mb in max_cached_mb

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      it seems to print incorrect used_mb size in max_cached_mb on large memory client.
      that client has 24TB memory and it has 12TB for max_cached_mb by default, but max_cached_mb says most of cache is "used_mb".

      sdf2{root}1014: free
                    total        used        free      shared  buff/cache   available
      Mem:    24965051716   139544736 24824112084       39772     1394896 24818988328
      Swap:       8388604           0     8388604
      sdf2{root}1015: lctl get_param llite.*.max_cached_mb
      llite.lustre-ffff96631b3d6800.max_cached_mb=
      users: 16
      max_cached_mb: 12189966
      used_mb: 12157198
      unused_mb: 32768
      reclaim_count: 0
      
      'Drop cache' doesn't help niether.
      
      sdf2{root}1016: echo 3 > /proc/sys/vm/drop_caches 
      sdf2{root}1017: lctl get_param llite.*.max_cached_mb
      llite.lustre-ffff96631b3d6800.max_cached_mb=
      users: 16
      max_cached_mb: 12189966
      used_mb: 12157198
      unused_mb: 32768
      reclaim_count: 0

            emoly.liu Emoly Liu
            emoly.liu Emoly Liu
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: